--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -38,13 +38,13 @@ env:
   CONFIG: Release
   APP_PACKAGE_PATH: 'published'                                                                 # set this to the path to your web app project, defaults to the repository root
   COVERAGE_FORMAT: opencover
-  UNIT_COVERAGE_FILENAME: 'opencover.unit.xml'
-  NUNIT_INTEGRATION_COVERAGE_FILENAME: 'opencover.nunit.integration.xml'
-  XUNIT_INTEGRATION_COVERAGE_FILENAME: 'opencover.xunit.integration.xml'
-  TUNIT_INTEGRATION_COVERAGE_FILENAME: 'opencover.tunit.integration.xml'
-  NUNIT_RD_INTEGRATION_COVERAGE_FILENAME: 'opencover.nunit.realdevice.integration.xml'
-  XUNIT_RD_INTEGRATION_COVERAGE_FILENAME: 'opencover.xunit.realdevice.integration.xml'
-  TUNIT_RD_INTEGRATION_COVERAGE_FILENAME: 'opencover.tunit.realdevice.integration.xml'
+  UNIT_COVERAGE_FILENAME: opencover.unit.xml
+  NUNIT_INTEGRATION_COVERAGE_FILENAME: opencover.nunit.integration.xml
+  XUNIT_INTEGRATION_COVERAGE_FILENAME: opencover.xunit.integration.xml
+  TUNIT_INTEGRATION_COVERAGE_FILENAME: opencover.tunit.integration.xml
+  NUNIT_RD_INTEGRATION_COVERAGE_FILENAME: opencover.nunit.realdevice.integration.xml
+  XUNIT_RD_INTEGRATION_COVERAGE_FILENAME: opencover.xunit.realdevice.integration.xml
+  TUNIT_RD_INTEGRATION_COVERAGE_FILENAME: opencover.tunit.realdevice.integration.xml
   COVERAGE_THRESHOLD: 80
 
 jobs:
