--- a/Saucery.TUnit/Saucery.TUnit.csproj
+++ b/Saucery.TUnit/Saucery.TUnit.csproj
@@ -11,7 +11,7 @@
   <PropertyGroup>
 	<IsPackable>true</IsPackable>
 	<PackageId>Saucery.TUnit</PackageId>
-	<PackageVersion>0.12.14</PackageVersion>
+	<PackageVersion>0.12.17</PackageVersion>
 	<PackageReadmeFile>README.md</PackageReadmeFile>
 	<Authors>Andrew Gray</Authors>
 	<Company>SauceForge</Company>
@@ -29,7 +29,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="TUnit" Version="0.12.14" />
+    <None Remove="SauceryTBase.cs~RF9d8e4a.TMP" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="TUnit" Version="0.12.17" />
     <None Include="Images\Saucery.TUnit.128x128.png" Pack="true" PackagePath="\" />
     <None Include="README.md" Pack="true" PackagePath="\" />
   </ItemGroup>
