--- a/.github/workflows/tunit-pipeline.yml
+++ b/.github/workflows/tunit-pipeline.yml
@@ -168,12 +168,21 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         name: unit-test-results
-    
-    - name: Present working directory
-      run: pwd
 
-    - name: Display structure of downloaded files
-      run: ls -R
+    - name: Setup Java JDK for Codacy Code Coverage
+      uses: actions/setup-java@v4.7.0
+      with:
+        distribution: 'oracle'
+        java-version: '21'
+    
+    - name: Codacy Code Coverage
+      run: bash <(curl -Ls https://coverage.codacy.com/get.sh) report -l CSharp -r ${{env.UNIT_COVERAGE_FILENAME}}
+    
+    # - name: Present working directory
+    #   run: pwd
+
+    # - name: Display structure of downloaded files
+    #   run: ls -R
 
     - name: ReportGenerator
       uses: danielpalme/ReportGenerator-GitHub-Action@5.4.4
