--- a/.github/workflows/tunit-pipeline.yml
+++ b/.github/workflows/tunit-pipeline.yml
@@ -9,6 +9,7 @@ on:
       - 'feat/**'
       - 'feature/**'
       - 'fix/**'
+      - 'test/**'
 
 env:
   PROJECT_NAME: Saucery
@@ -95,8 +96,26 @@ jobs:
     - name: Compile solution
       run: dotnet build -c ${{ env.CONFIG }}
 
+    # - name: Run TUnit Integration Tests
+    #   run: dotnet test -c ${{ env.CONFIG }} ${{ env.M_TUNIT_PROJECT }}
+
     - name: Run TUnit Integration Tests
-      run: dotnet test -c ${{ env.CONFIG }} ${{ env.M_TUNIT_PROJECT }}
+      uses: b3b00/coverlet-action@11.9
+      with:
+        testProject: ${{ env.M_TUNIT_PROJECT }}
+        output: ${{ env.TUNIT_INTEGRATION_COVERAGE_FILENAME }}
+        outputFormat: ${{ env.COVERAGE_FORMAT }}
+        #threshold: ${{ env.COVERAGE_THRESHOLD }}
+        excludes: '[Merlin.TUnit]Tests.*'
+
+    - name: Display structure of downloaded files
+      run: ls -R
+
+    - name: Publish Artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: xunit-integration-test-results
+        path: ${{ env.XUNIT_INT_DIR }}/${{env.XUNIT_INTEGRATION_COVERAGE_FILENAME}}
 
   tunit-real-integration-tests:
     runs-on: ubuntu-latest
