--- a/.github/workflows/tunit-pipeline.yml
+++ b/.github/workflows/tunit-pipeline.yml
@@ -96,17 +96,9 @@ jobs:
     - name: Compile solution
       run: dotnet build -c ${{ env.CONFIG }}
 
-    # - name: Run TUnit Integration Tests
-    #   run: dotnet test -c ${{ env.CONFIG }} ${{ env.M_TUNIT_PROJECT }}
-
     - name: Run TUnit Integration Tests
-      uses: b3b00/coverlet-action@11.9
-      with:
-        testProject: ${{ env.M_TUNIT_PROJECT }}
-        output: ${{ env.TUNIT_INTEGRATION_COVERAGE_FILENAME }}
-        outputFormat: ${{ env.COVERAGE_FORMAT }}
-        #threshold: ${{ env.COVERAGE_THRESHOLD }}
-        excludes: '[Merlin.TUnit]Tests.*'
+      #run: dotnet test -c ${{ env.CONFIG }} --collect "Code Coverage;Format=cobertura" ${{ env.M_TUNIT_PROJECT }}
+      run: dotnet test -c ${{ env.CONFIG }} --collect "Code Coverage;Format=${{ env.COVERAGE_FORMAT }}" ${{ env.M_TUNIT_PROJECT }}
 
     - name: Display structure of downloaded files
       run: ls -R
