--- a/Saucery.TUnit/Saucery.TUnit.csproj
+++ b/Saucery.TUnit/Saucery.TUnit.csproj
@@ -6,6 +6,8 @@
     <Nullable>enable</Nullable>
 	  <CopyLocalLockFileAssemblies>false</CopyLocalLockFileAssemblies>
 	  <GenerateRuntimeConfigDevFile>true</GenerateRuntimeConfigDevFile>
+    <EnableStaticNativeInstrumentation>false</EnableStaticNativeInstrumentation>
+    <EnableDynamicNativeInstrumentation>false</EnableDynamicNativeInstrumentation>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -30,6 +32,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
+    <PackageReference Include="Microsoft.CodeCoverage" Version="17.13.0" />
     <PackageReference Include="TUnit" Version="0.14.0" />
     <None Include="Images\Saucery.TUnit.128x128.png" Pack="true" PackagePath="\" />
     <None Include="README.md" Pack="true" PackagePath="\" />
