--- a/.github/workflows/tunit-pipeline.yml
+++ b/.github/workflows/tunit-pipeline.yml
@@ -97,8 +97,13 @@ jobs:
       run: dotnet build -c ${{ env.CONFIG }}
 
     - name: Run TUnit Integration Tests
-      run: dotnet test -c ${{ env.CONFIG }} --collect "Code Coverage;Format=cobertura" ${{ env.M_TUNIT_PROJECT }}
-      #run: dotnet test -c ${{ env.CONFIG }} --collect "Code Coverage;Format=${{ env.COVERAGE_FORMAT }}" ${{ env.M_TUNIT_PROJECT }}
+      uses: b3b00/coverlet-action@11.9
+      with:
+        testProject: ${{ env.M_TUNIT_PROJECT }}
+        output: ${{ env.TUNIT_INTEGRATION_COVERAGE_FILENAME }}
+        outputFormat: ${{ env.COVERAGE_FORMAT }}
+        #threshold: ${{ env.COVERAGE_THRESHOLD }}
+        excludes: '[Merlin.TUnit]Tests.*'
 
     - name: Display structure of downloaded files
       run: ls -R
@@ -108,6 +113,19 @@ jobs:
       with:
         name: tunit-integration-test-results
         path: ${{ env.TUNIT_INT_DIR }}/${{env.TUNIT_INTEGRATION_COVERAGE_FILENAME}}
+        
+    # - name: Run TUnit Integration Tests
+    #   run: dotnet test -c ${{ env.CONFIG }} --collect "Code Coverage;Format=cobertura" ${{ env.M_TUNIT_PROJECT }}
+    #   #run: dotnet test -c ${{ env.CONFIG }} --collect "Code Coverage;Format=${{ env.COVERAGE_FORMAT }}" ${{ env.M_TUNIT_PROJECT }}
+
+    # - name: Display structure of downloaded files
+    #   run: ls -R
+
+    # - name: Publish Artifacts
+    #   uses: actions/upload-artifact@v4
+    #   with:
+    #     name: tunit-integration-test-results
+    #     path: ${{ env.TUNIT_INT_DIR }}/${{env.TUNIT_INTEGRATION_COVERAGE_FILENAME}}
 
   tunit-real-integration-tests:
     runs-on: ubuntu-latest
