Try removing GitHubActionsTestLogger dependency

--- a/Merlin.TUnit/Merlin.TUnit.csproj
+++ b/Merlin.TUnit/Merlin.TUnit.csproj
@@ -18,8 +18,8 @@
       <PrivateAssets>All</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="TUnit" Version="0.14.6" />
-    <PackageReference Include="GitHubActionsTestLogger" Version="2.4.1" PrivateAssets="All" />
+    <PackageReference Include="TUnit" Version="0.14.13" />
+    <!--<PackageReference Include="GitHubActionsTestLogger" Version="2.4.1" PrivateAssets="All" />-->
   </ItemGroup>
 
   <ItemGroup>
