--- a/Merlin.TUnit.RealDevices/Merlin.TUnit.RealDevices.csproj
+++ b/Merlin.TUnit.RealDevices/Merlin.TUnit.RealDevices.csproj
@@ -4,6 +4,9 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <EmbedUntrackedSources>true</EmbedUntrackedSources>
+    <CollectCoverage>true</CollectCoverage>
+    <CoverletOutputFormat>opencover</CoverletOutputFormat>
   </PropertyGroup>
 
 	<ItemGroup>
