--- a/.github/workflows/unittestonly.yml
+++ b/.github/workflows/unittestonly.yml
@@ -6,7 +6,7 @@ on:
 env:
   PROJECT_NAME: Saucery
   SOLN_FILE: Saucery.sln                                                                        # full path to your solution file
-  UT_DIR: Saucery.Core.Tests
+  COVERLET_DIR: ./TestResults
   UT_PROJECT: Saucery.Core.Tests/Saucery.Core.Tests.csproj                                      # full path to your unit test project file
   SAUCE_USER_NAME: ${{ secrets.SAUCE_USER_NAME }}
   SAUCE_API_KEY: ${{ secrets.SAUCE_API_KEY }}
@@ -53,7 +53,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: unit-test-results
-        path: ./TestResults/${{ env.UNIT_COVERAGE_FILENAME }}
+        path: ${{ env.COVERLET_DIR }}/${{ env.UNIT_COVERAGE_FILENAME }}
 
   generate-report:
     runs-on: ubuntu-latest
