--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -335,11 +335,14 @@ jobs:
     - name: Run TUnit Integration Tests
       run: dotnet test -c ${{ env.CONFIG }} ${{ env.M_TUNIT_PROJECT }} --no-build /p:CoverletOutput=${{ env.TUNIT_INTEGRATION_COVERAGE_FILENAME }}
 
+    - name: Display structure of downloaded files
+      run: ls -R
+
     - name: Publish Artifacts
       uses: actions/upload-artifact@v4
       with:
         name: tunit-integration-test-results
-        path: ${{ env.COVERLET_DIR }}/${{env.TUNIT_INTEGRATION_COVERAGE_FILENAME}}
+        path: ${{ env.TUNIT_INT_DIR }}/${{env.TUNIT_INTEGRATION_COVERAGE_FILENAME}}
 
   tunit-real-integration-tests:
     runs-on: ubuntu-latest
@@ -369,7 +372,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: tunit-real-integration-test-results
-        path: ${{ env.COVERLET_DIR }}/${{env.TUNIT_RD_INTEGRATION_COVERAGE_FILENAME}}
+        path: ${{ env.TUNIT_RD_INT_DIR }}/${{env.TUNIT_RD_INTEGRATION_COVERAGE_FILENAME}}
 
   tunit-external-tests:
     runs-on: ubuntu-latest
