--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -13,7 +13,7 @@ on:
 env:
   PROJECT_NAME: Saucery
   SOLN_FILE: Saucery.sln                                                                        # full path to your solution file
-  UT_DIR: Saucery.Core.Tests
+  COVERLET_DIR: ./TestResults
   NUNIT_INT_DIR: Merlin.NUnit
   XUNIT_INT_DIR: Merlin.XUnit
   TUNIT_INT_DIR: Merlin.TUnit
@@ -73,7 +73,7 @@ jobs:
     #    build-breaking: true
 
     - name: Run Unit Tests
-      uses: b3b00/coverlet-action@11.9
+      uses: b3b00/coverlet-action@1.3.5-alpha1
       with:
         testProject: ${{ env.UT_PROJECT }}
         output: ${{ env.UNIT_COVERAGE_FILENAME }}
@@ -88,7 +88,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: unit-test-results
-        path: ${{ env.UT_DIR }}/${{env.UNIT_COVERAGE_FILENAME}}
+        path: ${{ env.COVERLET_DIR }}/${{env.UNIT_COVERAGE_FILENAME}}
 
   xunit-integration-tests:
     runs-on: ubuntu-latest
@@ -108,7 +108,7 @@ jobs:
       run: dotnet build -c ${{ env.CONFIG }}
 
     - name: Run XUnit Integration Tests
-      uses: b3b00/coverlet-action@11.9
+      uses: b3b00/coverlet-action@1.3.5-alpha1
       with:
         testProject: ${{ env.M_XUNIT_PROJECT }}
         output: ${{ env.XUNIT_INTEGRATION_COVERAGE_FILENAME }}
@@ -123,7 +123,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: xunit-integration-test-results
-        path: ${{ env.XUNIT_INT_DIR }}/${{env.XUNIT_INTEGRATION_COVERAGE_FILENAME}}
+        path: ${{ env.COVERLET_DIR }}/${{env.XUNIT_INTEGRATION_COVERAGE_FILENAME}}
 
   nunit-integration-tests:
     runs-on: ubuntu-latest
@@ -143,7 +143,7 @@ jobs:
       run: dotnet build -c ${{ env.CONFIG }}
 
     - name: Run NUnit Integration Tests
-      uses: b3b00/coverlet-action@11.9
+      uses: b3b00/coverlet-action@1.3.5-alpha1
       with:
         testProject: ${{ env.M_NUNIT_PROJECT }}
         output: ${{ env.NUNIT_INTEGRATION_COVERAGE_FILENAME }}
@@ -158,7 +158,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: nunit-integration-test-results
-        path: ${{ env.NUNIT_INT_DIR }}/${{env.NUNIT_INTEGRATION_COVERAGE_FILENAME}}
+        path: ${{ env.COVERLET_DIR }}/${{env.NUNIT_INTEGRATION_COVERAGE_FILENAME}}
 
   nunit-real-integration-tests:
     runs-on: ubuntu-latest
@@ -178,7 +178,7 @@ jobs:
       run: dotnet build -c ${{ env.CONFIG }}
 
     - name: Run NUnit Integration Tests
-      uses: b3b00/coverlet-action@11.9
+      uses: b3b00/coverlet-action@1.3.5-alpha1
       with:
         testProject: ${{ env.M_RD_NUNIT_PROJECT }}
         output: ${{ env.NUNIT_RD_INTEGRATION_COVERAGE_FILENAME }}
@@ -193,7 +193,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: nunit-real-integration-test-results
-        path: ${{ env.NUNIT_RD_INT_DIR }}/${{env.NUNIT_RD_INTEGRATION_COVERAGE_FILENAME}}
+        path: ${{ env.COVERLET_DIR }}/${{env.NUNIT_RD_INTEGRATION_COVERAGE_FILENAME}}
 
   xunit-real-integration-tests:
     runs-on: ubuntu-latest
@@ -213,7 +213,7 @@ jobs:
       run: dotnet build -c ${{ env.CONFIG }}
 
     - name: Run XUnit Real Integration Tests
-      uses: b3b00/coverlet-action@11.9
+      uses: b3b00/coverlet-action@1.3.5-alpha1
       with:
         testProject: ${{ env.M_RD_XUNIT_PROJECT }}
         output: ${{ env.XUNIT_RD_INTEGRATION_COVERAGE_FILENAME }}
@@ -228,7 +228,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: xunit-real-integration-test-results
-        path: ${{ env.XUNIT_RD_INT_DIR }}/${{env.XUNIT_RD_INTEGRATION_COVERAGE_FILENAME}}
+        path: ${{ env.COVERLET_DIR }}/${{env.XUNIT_RD_INTEGRATION_COVERAGE_FILENAME}}
 
   xunit-external-tests:
     runs-on: ubuntu-latest
@@ -334,6 +334,9 @@ jobs:
 
     - name: Run TUnit Integration Tests
       run: dotnet test -c ${{ env.CONFIG }} ${{ env.M_TUNIT_PROJECT }} --no-build /p:CoverletOutput=${{ env.TUNIT_INTEGRATION_COVERAGE_FILENAME }}
+
+    - name: Display structure of downloaded files
+      run: ls -R
 
     - name: Publish Artifacts
       uses: actions/upload-artifact@v4
