--- a/.github/workflows/tunit-pipeline.yml
+++ b/.github/workflows/tunit-pipeline.yml
@@ -14,13 +14,13 @@ on:
 env:
   PROJECT_NAME: Saucery
   SOLN_FILE: Saucery.sln                                                                        # full path to your solution file
-  UT_DIR: Saucery.Core.Tests
   NUNIT_INT_DIR: Merlin.NUnit
   XUNIT_INT_DIR: Merlin.XUnit
   TUNIT_INT_DIR: Merlin.TUnit
   NUNIT_RD_INT_DIR: Merlin.NUnit.RealDevices
   XUNIT_RD_INT_DIR: Merlin.XUnit.RealDevices
   TUNIT_RD_INT_DIR: Merlin.TUnit.RealDevices
+  COVERLET_DIR: ./TestResults
   UT_PROJECT: Saucery.Core.Tests/Saucery.Core.Tests.csproj                                      # full path to your unit test project file
   M_TUNIT_PROJECT: Merlin.TUnit/Merlin.TUnit.csproj                                             # full path to xunit internal integration test project file
   M_RD_TUNIT_PROJECT: Merlin.TUnit.RealDevices/Merlin.TUnit.RealDevices.csproj                  # full path to xunit internal integration test project file
@@ -62,7 +62,7 @@ jobs:
     #    build-breaking: true
 
     - name: Run Unit Tests
-      uses: b3b00/coverlet-action@11.9
+      uses: b3b00/coverlet-action@1.3.5-alpha1
       with:
         testProject: ${{ env.UT_PROJECT }}
         output: ${{ env.UNIT_COVERAGE_FILENAME }}
@@ -77,7 +77,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: unit-test-results
-        path: ${{ env.UT_DIR }}/${{env.UNIT_COVERAGE_FILENAME}}
+        path: ${{ env.COVERLET_DIR }}/${{env.UNIT_COVERAGE_FILENAME}}
 
   tunit-integration-tests:
     runs-on: ubuntu-latest
@@ -126,7 +126,7 @@ jobs:
 
     - name: Run TUnit Real Integration Tests
       run: dotnet test -c ${{ env.CONFIG }} ${{ env.M_RD_TUNIT_PROJECT }} --no-build /p:CoverletOutput=${{ env.TUNIT_RD_INTEGRATION_COVERAGE_FILENAME }}
-
+    
     - name: Publish Artifacts
       uses: actions/upload-artifact@v4
       with:
