--- a/Merlin.NUnit/Merlin.NUnit.csproj
+++ b/Merlin.NUnit/Merlin.NUnit.csproj
@@ -17,7 +17,7 @@
     <PackageReference Include="NUnit" Version="4.3.2" />
     <PackageReference Include="NUnit3TestAdapter" Version="5.0.0" />
     <PackageReference Include="RestSharp" Version="112.1.0" />
-    <PackageReference Include="Selenium.Support" Version="4.32.0" />
+    <!--<PackageReference Include="Selenium.Support" Version="4.33.0" />-->
     <PackageReference Include="Shouldly" Version="4.3.0" />
   </ItemGroup>
 
